--- a/public/quiz/css/style.css
+++ b/public/quiz/css/style.css
@@ -14,7 +14,12 @@ a {
     color: inherit;
     text-decoration: none;
 }
-.user-preferencesform-container {
+.user-preferences-form-container button:disabled {
+    opacity: 0.5;
+    pointer-events: none;
+    cursor: not-allowed !important;
+}
+.user-preferences-form-container {
     width: 80%;
     margin: 50px auto;
 }
@@ -191,6 +196,9 @@ a {
 .steps-header .steps-wrapper .step .step-icon svg path {
     fill: #f6945fb3;
 }
+.steps-header .steps-wrapper .step .step-icon {
+    color: #f6935f;
+}
 .steps-header .steps-wrapper .step.active .step-icon {
     flex-shrink: 0;
     width: 45px;
@@ -198,6 +206,7 @@ a {
     display: flex;
     justify-content: center;
     align-items: center;
+    color: white;
     background-color: #f6935f;
     border-radius: 50%;
 }
@@ -348,14 +357,14 @@ a {
     display: flex;
     flex-wrap: wrap;
     align-items: center;
-    gap: 20px;
+    gap: 40px;
 }
 .product-wrapper {
     display: flex;
     flex-wrap: wrap;
     align-items: center;
     justify-content: center;
-    gap: 30px;
+    gap: 20px;
 }
 .product-wrapper .product-img {
     width: 200px;
