--- a/public/quiz/css/style.responsive.css
+++ b/public/quiz/css/style.responsive.css
@@ -4,9 +4,29 @@
         margin: 10px auto;
         padding: 10px;
     }
+    .user-preferences-form-container {
+        width: 90%;
+    }
     .main-heading {
         font-size: 45px;
         margin-bottom: 45px;
+    }
+    .products-container {
+        row-gap: 30px;
+        column-gap: 20px;
+    }
+    .product-wrapper {
+        width: calc((100% - 20px) / 2);
+    }
+    .product-wrapper .product-img {
+        width: 170px;
+        height: 170px;
+    }
+    .product-wrapper .product-title {
+        font-size: 24px;
+    }
+    .product-wrapper .links-wrapper .see-more {
+        font-size: 16px;
     }
 }
 @media (max-width: 768px) {
@@ -61,6 +81,22 @@
     .question-wrapper .answers-wrapper .answer-wrapper .answer {
         font-size: 16px;
     }
+    .result-title {
+        font-size: 30px;
+    }
+    .product-wrapper {
+        width: 100%;
+    }
+    .product-wrapper .product-img {
+        width: 200px;
+        height: 200px;
+    }
+    .product-wrapper .product-title {
+        font-size: 27px;
+    }
+    .product-wrapper .links-wrapper .see-more {
+        font-size: 17px;
+    }
 }
 @media (max-width: 500px) {
     .main-heading {
@@ -98,5 +134,17 @@
     .steps-header .steps-wrapper .step.active .step-icon svg {
         width: 19px;
         height: 19px;
+    }
+    .product-wrapper {
+        flex-direction: column;
+        gap: 15px;
+    }
+    .product-wrapper .links-wrapper {
+        align-items: center;
+        gap: 5px;
+    }
+    .preferences-test-done .start-over {
+        width: 100%;
+        margin-top: 30px;
     }
 }
