--- a/public/quiz/css/style.css
+++ b/public/quiz/css/style.css
@@ -35,11 +35,77 @@ a {
 ::-webkit-scrollbar-thumb:hover {
     background: #dd7239 !important;
 }
+.intro {
+    width: 90%;
+    display: flex;
+    align-items: center;
+    gap: 30px;
+    padding: 50px;
+    background: #da855759;
+    margin: 50px auto;
+    border-radius: 25px;
+}
+.intro .intro-image {
+    flex-shrink: 0;
+    width: calc(50% - 15px);
+    max-width: 300px;
+    height: 400px;
+    overflow: hidden;
+    border-radius: 15px;
+}
+.intro .intro-image img {
+    width: 100%;
+    height: 100%;
+}
+.intro .intro-text {
+    display: flex;
+    flex-direction: column;
+    gap: 20px;
+    width: calc(50% - 15px);
+    flex-grow: 1;
+}
+.intro .intro-text .text-bold-light {
+    color: #d46529;
+    font-size: 30px;
+}
+.intro .intro-text .text-bold-dark {
+    color: #351a0b;
+    font-size: 20px;
+}
+.intro .intro-text .text-normal-dark {
+    color: #351a0b;
+    font-size: 18px;
+}
+.intro .intro-text .start-quiz {
+    width: fit-content;
+    min-width: 200px;
+    max-width: 100%;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    padding: 10px 50px;
+    margin-top: 15px;
+    background-color: #dd7339;
+    color: #fff;
+    font-size: 20px;
+    font-weight: bold;
+    border: 1px solid #dd7339;
+    font-size: 18px;
+    border-radius: 9px;
+    transition: 0.3s;
+}
+.intro .intro-text .start-quiz.disabled {
+    opacity: 0.5;
+    pointer-events: none;
+}
 .main-heading {
     font-size: 50px;
     text-align: center;
     color: #351a0b;
     margin-bottom: 40px;
+}
+.main-heading.hidden {
+    display: none;
 }
 .gender-selection {
     display: flex;
@@ -266,17 +332,25 @@ a {
 }
 .question-wrapper .answers-wrapper .answer-wrapper label {
     display: flex;
-    justify-content: start;
+    flex-direction: column;
+    justify-content: center;
     align-items: center;
     gap: 10px;
     width: 100%;
+    padding: 10px;
     cursor: pointer;
 }
 .question-wrapper .answers-wrapper .answer-wrapper .answer {
+    color: #a15e3a;
+    font-size: 21px;
+    text-align: center;
+    font-weight: bold;
+}
+.question-wrapper .answers-wrapper .answer-wrapper .answer-desc {
     text-align: center;
     color: #a15e3a;
     font-size: 18px;
-    font-weight: 500;
+    text-align: center;
 }
 .question-wrapper .answer-wrapper .answer-img {
     width: 100px;
@@ -362,7 +436,7 @@ a {
     gap: 40px;
 }
 .product-wrapper {
-    /*width: calc((100% - 40px) / 2);*/
+    /* width: calc((100% - 40px) / 2); */
     display: flex;
     align-items: center;
     gap: 20px;
@@ -373,6 +447,7 @@ a {
     overflow: hidden;
     border-radius: 15px;
     box-shadow: 0 0 5px 0 #a15e3a5c;
+    flex-shrink: 0;
 }
 .product-wrapper .product-img img {
     width: 100%;
@@ -389,9 +464,13 @@ a {
     font-weight: bold;
     font-size: 27px;
 }
-.product-wrapper .links-wrapper .see-more {
-    font-size: 18px;
+.product-wrapper .product-desc {
     color: #a15e3a;
+    font-size: 16px;
+}
+.product-wrapper .links-wrapper .see-more {
+    font-size: 19px;
+    color: #d46529;
     background-color: transparent;
     text-decoration: underline;
     text-underline-offset: 3px;
