--- a/public/quiz/css/style.responsive.css
+++ b/public/quiz/css/style.responsive.css
@@ -15,9 +15,9 @@
         row-gap: 30px;
         column-gap: 20px;
     }
-    .product-wrapper {
+    /* .product-wrapper {
         width: calc((100% - 20px) / 2);
-    }
+    } */
     .product-wrapper .product-img {
         width: 170px;
         height: 170px;
@@ -25,11 +25,41 @@
     .product-wrapper .product-title {
         font-size: 24px;
     }
+    .product-wrapper .product-desc {
+        font-size: 15px;
+    }
     .product-wrapper .links-wrapper .see-more {
-        font-size: 16px;
+        font-size: 17px;
     }
 }
 @media (max-width: 768px) {
+    .intro {
+        width: 95%;
+        padding: 40px;
+        background: #da855759;
+        margin: 50px auto;
+    }
+
+    .intro .intro-image {
+        max-width: 270px;
+        height: 350px;
+    }
+
+    .intro .intro-text {
+        gap: 15px;
+    }
+
+    .intro .intro-text .text-bold-light {
+        font-size: 27px;
+    }
+
+    .intro .intro-text .text-bold-dark {
+        font-size: 18px;
+    }
+
+    .intro .intro-text .text-normal-dark {
+        font-size: 16px;
+    }
     .container {
         width: 100%;
         margin: 10px auto;
@@ -84,9 +114,9 @@
     .result-title {
         font-size: 30px;
     }
-    .product-wrapper {
+    /* .product-wrapper {
         width: 100%;
-    }
+    } */
     .product-wrapper .product-img {
         width: 200px;
         height: 200px;
@@ -98,6 +128,15 @@
         font-size: 17px;
     }
 }
+@media (max-width: 600px) {
+    .intro {
+        padding: 30px;
+    }
+    .intro .intro-image {
+        display: none;
+    }
+}
+
 @media (max-width: 500px) {
     .main-heading {
         font-size: 35px;
@@ -141,7 +180,9 @@
     }
     .product-wrapper .links-wrapper {
         align-items: center;
-        gap: 5px;
+    }
+    .product-wrapper .product-desc {
+        text-align: center;
     }
     .preferences-test-done .start-over {
         width: 100%;
