--- a/public/quiz/css/style.css
+++ b/public/quiz/css/style.css
@@ -5,6 +5,11 @@
     box-sizing: border-box;
     font-family: 'IBM Plex Sans Arabic', sans-serif;
 }
+
+body {
+    background-color: #6B702E;
+}
+
 button {
     border: none;
     outline: none;
@@ -36,17 +41,21 @@ a {
     background: #dd7239 !important;
 }
 .intro {
-    min-width: 100vw;
+    /* min-width: 100vw; */
+    width: 100%;
     min-height: 100vh;
-    width: 90%;
     display: flex;
     align-items: center;
+    flex-direction: column;
     gap: 30px;
-    padding: 50px;
-    background: #da855759;
+    padding: 30px;
+    background: #6B702E;
 }
-.intro .intro-image {
-    flex-shrink: 0;
+.intro .intro-logo img {
+    max-width: 240px;
+}
+/* .intro .intro-image {
+     flex-shrink: 0;
     width: calc(50% - 15px);
     max-width: 300px;
     height: 400px;
@@ -56,7 +65,7 @@ a {
 .intro .intro-image img {
     width: 100%;
     height: 100%;
-}
+}  */
 .intro .intro-text {
     display: flex;
     flex-direction: column;
@@ -65,15 +74,16 @@ a {
     flex-grow: 1;
 }
 .intro .intro-text .text-bold-light {
-    color: #d46529;
+    color: #fff;
     font-size: 30px;
+    font-weight: 600;
 }
 .intro .intro-text .text-bold-dark {
-    color: #351a0b;
+    color: #fff;
     font-size: 20px;
 }
 .intro .intro-text .text-normal-dark {
-    color: #351a0b;
+    color: #fff;
     font-size: 18px;
 }
 .intro .intro-text .start-quiz {
@@ -85,15 +95,20 @@ a {
     align-items: center;
     padding: 10px 50px;
     margin-top: 15px;
-    background-color: #dd7339;
+    background-color: #6B702E;
     color: #fff;
     font-size: 20px;
     font-weight: bold;
-    border: 1px solid #dd7339;
+    border: 1px solid #000;
     font-size: 18px;
     border-radius: 9px;
     transition: 0.3s;
 }
+
+.intro .intro-text .start-quiz:hover {
+    box-shadow: 0 0 10px 0 #88903c;
+}
+
 .intro .intro-text .start-quiz.disabled {
     opacity: 0.5;
     pointer-events: none;
@@ -101,7 +116,7 @@ a {
 .main-heading {
     font-size: 50px;
     text-align: center;
-    color: #351a0b;
+    color: #fff;
     margin-bottom: 40px;
 }
 .main-heading.hidden {
@@ -221,12 +236,12 @@ a {
     height: 10px;
 }
 .back-to-gender-selection svg path{
-    fill: #dd7239;
+    fill: #fff;
 }
 .steps-header {
     margin: 0 0 5px;
     padding: 15px 5px;
-    border: 1px solid #ebac8abe;
+    border: 1px solid #000;
     border-radius: 12px;
 }
 .steps-header .steps-wrapper {
@@ -252,18 +267,18 @@ a {
     position: absolute;
     top: 0;
     inset-inline-end: 0;
-    background-color: #F9E6DB;
+    background-color: #000;
     border-radius: 2px;
 }
 .steps-header .steps-wrapper .step .step-icon svg {
     width: 22px;
-        height: 22px;
+    height: 22px;
 }
 .steps-header .steps-wrapper .step .step-icon svg path {
     fill: #f6945fb3;
 }
 .steps-header .steps-wrapper .step .step-icon {
-    color: #f6935f;
+    color: #fff;
 }
 .steps-header .steps-wrapper .step.active .step-icon {
     flex-shrink: 0;
@@ -273,7 +288,8 @@ a {
     justify-content: center;
     align-items: center;
     color: white;
-    background-color: #f6935f;
+    background-color: #6B702E;
+    border: 1px solid #000;
     border-radius: 50%;
 }
 .steps-header .steps-wrapper .step.active .step-icon svg path {
@@ -285,12 +301,12 @@ a {
 }
 .steps-header .steps-wrapper .step .step-desc .step-num{
     font-size: 15px;
-        color: #f6935f;
+    color: #fff;
 }
 .steps-header .steps-wrapper .step .step-desc .step-title {
     font-size: 20px;
     font-weight: bold;
-    color: #351a0b;
+    color: #fff;
 }
 .steps-header .steps-wrapper .step.active .step-desc {
     display: flex;
@@ -315,7 +331,7 @@ a {
 .question-wrapper .question {
     font-size: 22px;
     font-weight: bold;
-    color: #351a0b;
+    color: #fff;
     margin-bottom: 25px;
 }
 .question-wrapper .answers-wrapper {
@@ -326,9 +342,13 @@ a {
 .question-wrapper .answers-wrapper .answer-wrapper {
     overflow: hidden;
     width: 100%;
-    border: 2px solid #faece4ae;
+    border: 2px solid #000;
+    background-color: #6B702E;
     border-radius: 15px;
     transition: 0.2s;
+}
+.question-wrapper .answers-wrapper .answer-wrapper:hover {
+    box-shadow: 0 0 10px 0 #88903c;
 }
 .question-wrapper .answers-wrapper .answer-wrapper label {
     display: flex;
@@ -341,14 +361,14 @@ a {
     cursor: pointer;
 }
 .question-wrapper .answers-wrapper .answer-wrapper .answer {
-    color: #a15e3a;
+    color: #fff;
     font-size: 21px;
     text-align: center;
     font-weight: bold;
 }
 .question-wrapper .answers-wrapper .answer-wrapper .answer-desc {
     text-align: center;
-    color: #a15e3a;
+    color: #fff;
     font-size: 18px;
     text-align: center;
 }
@@ -364,7 +384,8 @@ a {
     display: none;
 }
 .question-wrapper .answers-wrapper .answer-wrapper.selected {
-    border: 2px solid #f6935f;
+    border: 2px solid #000;
+    background-color: #88903c;
 }
 .form-container .buttons-wrapper {
     display: flex;
@@ -381,18 +402,24 @@ a {
     align-items: center;
     padding: 9px 25px;
     color: white;
-    background-color: #dd7339;
-    border: 1px solid #dd7339;
+    background-color: #6B702E;
+    border: 1px solid #000;
     font-size: 18px;
     border-radius: 9px;
 }
+
+.form-container .buttons-wrapper .move-to-next-step-btn:hover,
+.form-container .buttons-wrapper .submit-form-btn:hover {
+    box-shadow: 0 0 10px 0 #88903c;
+}
+
 .form-container .buttons-wrapper .submit-form-btn {
     padding: 10px 40px;
     font-weight: 20px;
 }
 .form-container .buttons-wrapper .back-to-prev-step-btn {
     font-size: 17px;
-    color: #d46529;
+    color: #fff;
     background-color: transparent;
     text-decoration: underline;
     text-underline-offset: 3px;
@@ -409,8 +436,8 @@ a {
     flex-direction: column;
     align-items: center;
     justify-content: center;
-    padding: 50px 25px;
-    box-shadow: 0 0 10px 0 #a15e3a76;
+    padding: 30px 25px;
+    box-shadow: 0 0 10px 0 #88903c;
     border-radius: 25px;
     transition: 0.5s;
 }
@@ -427,7 +454,7 @@ a {
     font-size: 35px;
     text-align: center;
     font-weight: bold;
-    color: #351a0b;
+    color: #fff;
 }
 .products-container {
     display: flex;
@@ -460,17 +487,24 @@ a {
     width: fit-content;
 }
 .product-wrapper .product-title {
-    color: #d46529;
+    color: #fff;
     font-weight: bold;
     font-size: 27px;
 }
 .product-wrapper .product-desc {
-    color: #a15e3a;
+    color: #fff;
     font-size: 16px;
+}
+
+.product-wrapper .discount-code {
+    color: #fff;
+    font-size: 14px;
+    font-weight: 800;
+    margin: 1rem 0;
 }
 .product-wrapper .links-wrapper .see-more {
     font-size: 19px;
-    color: #d46529;
+    color: #fff;
     background-color: transparent;
     text-decoration: underline;
     text-underline-offset: 3px;
@@ -482,16 +516,17 @@ a {
     align-items: center;
     padding: 10px 50px;
     margin-top: 15px;
-    background-color: #dd7339;
+    background-color: #6B702Eff;
     color: #fff;
-    border: 1px solid #dd7339;
+    border: 1px solid #000;
     font-size: 18px;
     border-radius: 9px;
     transition: 0.3s;
 }
 .preferences-test-done .start-over:hover {
-    color: #dd7339;
+    color: #fff;
     background-color: transparent;
+    box-shadow: 0 0 10px 0 #88903c;
 }
 .loader {
     display: flex;
@@ -499,7 +534,7 @@ a {
     align-items: center;
 }
 .loader svg path {
-    fill : #dd7239;
+    fill : #6B702E;
 }
 .spin {
     animation: spinLoader 2s infinite linear;
