quiz-edit-fix-validations-2

--- a/public/assets/dashboard/css/custom/edit-quiz.css
+++ b/public/assets/dashboard/css/custom/edit-quiz.css
@@ -14,3 +14,7 @@ input.resizable {
 .ql-toolbar.is-invalid, .select2-selection.is-invalid {
     border-color: #e85347;
 }
+
+.cursor-pointer {
+    cursor: pointer;
+}
