--- a/public/assets/dashboard/css/custom/edit-quiz.css
+++ b/public/assets/dashboard/css/custom/edit-quiz.css
@@ -18,3 +18,12 @@ input.resizable {
 .cursor-pointer {
     cursor: pointer;
 }
+
+.opacity-1 {
+    opacity: 1;
+}
+
+.opacity-03 {
+    border: 1px solid black;
+    opacity: 0.3;
+}
