--- a/public/assets/dashboard/css/custom/edit-quiz.css
+++ b/public/assets/dashboard/css/custom/edit-quiz.css
@@ -21,9 +21,11 @@ input.resizable {
 
 .opacity-1 {
     opacity: 1;
+    background-color: rgba(255, 255, 255);
 }
 
 .opacity-03 {
-    border: 1px solid black;
-    opacity: 0.3;
+    border: 1px solid lightsalmon;
+    /* opacity: 0.3; */
+    background-color: rgba(200, 200, 200, 0.2);
 }
