--- a/public/quiz/css/style.css
+++ b/public/quiz/css/style.css
@@ -3,11 +3,11 @@
     padding: 0;
     margin: 0;
     box-sizing: border-box;
-    font-family: 'IBM Plex Sans Arabic', sans-serif;
+    font-family: "IBM Plex Sans Arabic", sans-serif;
 }
 
 body {
-    background-color: #6B702E;
+    background-color: #6b702e;
 }
 
 button {
@@ -49,7 +49,7 @@ a {
     flex-direction: column;
     gap: 30px;
     padding: 30px;
-    background: #6B702E;
+    background: #6b702e;
 }
 .intro .intro-logo img {
     max-width: 240px;
@@ -101,7 +101,7 @@ a {
     align-items: center;
     padding: 10px 50px;
     margin-top: 15px;
-    background-color: #6B702E;
+    background-color: #6b702e;
     color: #fff;
     font-size: 20px;
     font-weight: bold;
@@ -243,7 +243,7 @@ a {
     width: 10px;
     height: 10px;
 }
-.back-to-gender-selection svg path{
+.back-to-gender-selection svg path {
     fill: #fff;
 }
 .steps-header {
@@ -296,18 +296,17 @@ a {
     justify-content: center;
     align-items: center;
     color: white;
-    background-color: #6B702E;
+    background-color: #6b702e;
     border: 1px solid #000;
     border-radius: 50%;
 }
 .steps-header .steps-wrapper .step.active .step-icon svg path {
     fill: #fff;
-
 }
 .steps-header .steps-wrapper .step .step-desc {
     display: none;
 }
-.steps-header .steps-wrapper .step .step-desc .step-num{
+.steps-header .steps-wrapper .step .step-desc .step-num {
     font-size: 15px;
     color: #fff;
 }
@@ -351,7 +350,7 @@ a {
     overflow: hidden;
     width: 100%;
     border: 2px solid #000;
-    background-color: #6B702E;
+    background-color: #6b702e;
     border-radius: 15px;
     transition: 0.2s;
 }
@@ -410,7 +409,7 @@ a {
     align-items: center;
     padding: 9px 25px;
     color: white;
-    background-color: #6B702E;
+    background-color: #6b702e;
     border: 1px solid #000;
     font-size: 18px;
     border-radius: 9px;
@@ -524,7 +523,7 @@ a {
     align-items: center;
     padding: 10px 50px;
     margin-top: 15px;
-    background-color: #6B702Eff;
+    background-color: #6b702eff;
     color: #fff;
     border: 1px solid #000;
     font-size: 18px;
@@ -542,7 +541,7 @@ a {
     align-items: center;
 }
 .loader svg path {
-    fill : #6B702E;
+    fill: #6b702e;
 }
 .spin {
     animation: spinLoader 2s infinite linear;
@@ -551,6 +550,32 @@ a {
 .animate {
     animation: swing 1s ease;
     -webkit-animation: swing 1s ease;
+}
+
+.intro-loader {
+    position: absolute;
+    width: 100%;
+    height: 100%;
+    background-color: white;
+    top: 0;
+    left: 0;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    transition: all 0.4s ease-in-out;
+}
+.intro-loader.hide {
+    opacity: 0;
+    pointer-events: none;
+}
+.intro-loader .spinner {
+    display: inline-block;
+    width: 40px;
+    height: 40px;
+    border: 4px solid rgba(0, 0, 0, 0.1);
+    border-radius: 50%;
+    border-top: 4px solid #88903c;
+    animation: spin 1s infinite linear;
 }
 @keyframes swing {
     15% {
